# arobot

./: .gitignore  README.md  install.sh
docs/: artrobot_1.md  debug.bash  gzserver.bash  joint_sensor.md  lib.md  local.bash  move_it.md  real_sense.md  record.md  sensor_demo.md  urdf.md
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robot.srdf
src/moveit_config/launch/: demo.launch  move_group.launch  moveit.rviz  planning_context.launch  robot_moveit_controller_manager.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
src/robot_control/common/: arobot_typdef.h
src/robot_control/control_demo/: CMakeLists.txt  package.xml
src/robot_control/control_demo/include/: simpleSerialSend.h
src/robot_control/control_demo/launch/: control_akdl_demo.launch  control_demo.launch  control_kdl_demo.launch  trajectory_send.launch  urdf_test_demo.launch
src/robot_control/control_demo/src/: .control_trajectory_pub.py.swm  arobot_breakwalk_cmd.cpp  arobot_walk.cpp  arobot_walk_arm.cpp  arobot_walk_cmd.cpp  climbthestairs.py  control_trajectory_pub.py  hello.py  record_js.py  sensor_control.py  sensor_ft.py  steps.py  trajectory_send_node.cpp  urdf_test.cpp
src/robot_control/control_demo/src/testcases/: backward.txt  control_akdl.cpp  control_db_basic.cpp  control_demo.cpp  control_demo_echo.py  control_kdl.cpp  data0.txt  data1.txt  data2.txt  forward.txt  leftward.txt  rightward.txt  test_data.txt
src/robot_control/core/arobot_hw/: CMakeLists.txt  package.xml
src/robot_control/core/arobot_hw/config/: ethercat_slave_no.yaml  i2t_limit.yaml  joint_name.yaml  joint_name.yaml.bak  joints_effort.yaml  joints_mapping.yaml  motor_config.yaml  motor_type.yaml  resolution_reduction.yaml  robot_arms_controller.yaml  robot_arms_controller_position.yaml  robot_body_controller_position.yaml  robot_ros_controller.yaml  robot_ros_controller_position.yaml  robot_trajectory_controller.yaml  robot_trajectory_controller_position.yaml  robot_tree.yaml
src/robot_control/core/arobot_hw/include/: AngleToNumber.h  arobot_hw.h  arobot_trans.h  ecat_init.h  sensors_hw.h
src/robot_control/core/arobot_hw/launch/: arms_controller_main.launch  arobot_trans_test.launch  body_controller_main.launch  controller_main.launch  load_arms_controller.launch  load_body_controller.launch  load_controller.launch  load_param.launch  load_trajectory_controller.launch  trajectory_controller_main.launch
src/robot_control/core/arobot_hw/src/: AngleToNumber.cpp  arobot_hw.cpp  arobot_trans.cpp  arobot_trans_test.cpp  controller_main.cpp  ecat_init.cpp
src/robot_control/core/arobot_hw/srv/: ActuatorControl.srv  ActuatorDetection.srv  DriverDetection.srv  SelfDetection.srv  SensorDetection.srv
src/robot_control/core/arobot_msgs/: CMakeLists.txt  package.xml  setup.py
src/robot_control/core/arobot_msgs/msg/: ForceSix.msg  Imu.msg  ImuBasic.msg  PowerState.msg
src/robot_control/core/arobot_msgs/srv/: PowerControl.srv
src/robot_control/core/database/: CMakeLists.txt  package.xml
src/robot_control/core/database/include/: arobotDB.h  extDB.h
src/robot_control/core/database/src/: arobotDB.cpp  arobotDB_demo.cpp  crow_server.cpp  extDB.cpp
src/robot_control/core/database/www/: draw.html
src/robot_control/scripts/: leftdata.txt  rightdata.txt
src/robot_control/scripts/example_math/: fsolve.py  integrate.py  interpolate.py  least_square.py  matrix_sym.py  weave.py
src/robot_control/scripts/inverted_pendulum/: fall_with_contracility.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: robot.rviz  robot_rviz.launch  robot_rviz_run.launch
src/robot_description/meshes/robot/: body_waist_link.STL  head_link.STL  l_elbow_link.STL  l_foot_link.STL  l_forearm_link.STL  l_hand_link.STL  l_hip_link.STL  l_hip_thigh_link.STL  l_shank_foot_link.STL  l_shank_link.STL  l_shoulder_arm_link.STL  l_shoulder_link.STL  neck_link.STL  r_arm_link.STL  r_elbow_link.STL  r_foot_link.STL  r_forearm_link.STL  r_hand_link.STL  r_hip_link.STL  r_hip_thigh_link.STL  r_shank_foot_link.STL  r_shank_link.STL  r_shoulder_link.STL  waist_link.STL
src/robot_description/urdf/: robot.URDF
src/robot_gazebo/: package.xml  urdf
src/robot_gazebo/Media/models/slope/: model.config  model.sdf  slope.dae  slope10.dae  slope15.dae  slope20.dae  slope25.dae  slope30.dae
src/robot_gazebo/Media/models/stair/: model.config  model.sdf
src/robot_gazebo/config/: robot.yaml
src/robot_gazebo/launch/: robot_display.launch  robot_gazebo.launch  robot_gazebo_arms.launch  robot_gazebo_client.launch  robot_gazebo_server.launch  robot_gazebo_trajectory.launch
src/robot_gazebo/worlds/: normal.world  slope.world  stairs.world
