<package>
  <name>robot_gazebo</name>
  <version>0.1.0</version>
  <description>robot_gazebo</description>
  <maintainer email="sunxiao@artrobot.com">Xiao</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robot_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
